[Update] prevent overflow on active label

--- a/qlip_bussines_theme/public/css/qlip_bussines_theme.css
+++ b/qlip_bussines_theme/public/css/qlip_bussines_theme.css
@@ -673,7 +673,7 @@ body.no-breadcrumbs .navbar .navbar-home:before {
   transition:0.2s ease all; 
   -moz-transition:0.2s ease all; 
   -webkit-transition:0.2s ease all;
-  width: 85%;
+  max-width: 85%;
   white-space: nowrap;
   overflow: hidden;
   text-overflow: ellipsis;
@@ -809,7 +809,7 @@ body.no-breadcrumbs .navbar .navbar-home:before {
 
   .floating-input ~ label, .link-field > .awesomplete > .floating-input ~ label, .floating-select ~ label {
     top: 0.5em;
-    width: 80%;
+    max-width: 80%;
     white-space: nowrap;
     overflow: hidden;
     text-overflow: ellipsis;
